Adjusted logo size for separate html files, since I added new classes to their header compared to the main index.html file.

--- a/code/style.css
+++ b/code/style.css
@@ -67,6 +67,14 @@ p {
   width: 200px;
 }
 
+.articles-header img, 
+.contact-header img, 
+.hamburgermenu-header img, 
+.about-header img, 
+.subscribe-header img {
+  width: 200px;
+}
+
 .navigation-container a {
   color: darkslategrey;
   text-decoration: none;
