ska testa lägga slider på other news mobil device

--- a/slider.css
+++ b/slider.css
@@ -1,40 +1,36 @@
-* {
-    box-sizing: border-box;
-  }
+
   
   .slider {
     width: 300px;
     text-align: center;
     overflow: hidden;
-  }
+  } /* Viktig */
   
   .slides {
     display: flex;
     
     overflow-x: auto;
     scroll-snap-type: x mandatory;
-    
-    
-    
-    scroll-behavior: smooth;
+
+  
     -webkit-overflow-scrolling: touch;
-    
-    /*
-    scroll-snap-points-x: repeat(300px);
-    scroll-snap-type: mandatory;
-    */
-  }
+  } /* Viktigt */
+
   .slides::-webkit-scrollbar {
     width: 10px;
     height: 10px;
-  }
+  } /* Lilla svarta pluppen längst nere */
+  
+
   .slides::-webkit-scrollbar-thumb {
     background: black;
     border-radius: 10px;
-  }
+  } /* Connektad till ovan */ 
+
   .slides::-webkit-scrollbar-track {
     background: transparent;
-  }
+  } /*Connectad till ovan */
+
   .slides > div {
     scroll-snap-align: start;
     flex-shrink: 0;
@@ -47,16 +43,14 @@
     transform: scale(1);
     transition: transform 0.5s;
     position: relative;
-    
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 100px;
-  }
-  .slides > div:target {
-  /*   transform: scale(0.8); */
-  }
-  .author-info {
+  } /* Viktig */
+
+  
+   .author-info {
     background: rgba(0, 0, 0, 0.75);
     color: white;
     padding: 0.75rem;
@@ -69,7 +63,8 @@
   }
   .author-info a {
     color: white;
-  }
+  } 
+  
   img {
     object-fit: cover;
     position: absolute;
@@ -91,28 +86,13 @@
     margin: 0 0 0.5rem 0;
     position: relative;
   }
+
   .slider > a:active {
     top: 1px;
   }
+
   .slider > a:focus {
-    background: #000;
+    background: #000; /* Ändrar färgen i siffer blädderknappen */
   }
   
-  /* Don't need button navigation */
-  @supports (scroll-snap-type) {
-    .slider > a {
-      display: none;
-    }
-  }
-  
-  html, body {
-    height: 100%;
-    overflow: hidden;
-  }
-  body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(to bottom, #74ABE2, #5563DE);
-    font-family: 'Ropa Sans', sans-serif;
-  }
+ 
