--- a/code/style.css
+++ b/code/style.css
@@ -60,13 +60,16 @@
 .big-news {
 
 display: flex;
-
+align-items: center;
 }
 
 
 .small-news {
 
   display: flex;
+  align-items: center;
+  justify-content: center;
+  
  
 }
 
@@ -80,26 +83,100 @@ display: flex;
 
 .news-cardtwo {
 
-  width: 100%;
-  height: 100px;
-  margin-top: 400px;
+  width: 300%;
+  height: 300px;
+  
  
 }
 
 .Text {
-
   display: flex;
-  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-top: 600px;
+}
+
+.container {
+    display:flex;
+    flex-direction:column;
+    width: 20%;
+    text-align: justify;
+
+}
+.news-cardthree {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  
+  
+}
+.image {
+    width:200px;
+    height:200px;
+    border: solid black;
+}
+.image img {
+    width: 100%;
+    height: auto;
+    min-height: 100%;
+}
+
+
+
+.Texttwo {
+
+display: flex;
+justify-content: space-evenly;
+flex-wrap: wrap;
+
+}
+
+.container2 {
+
+display:flex;
+flex-direction: column;
+width: 20%;
+
 
 }
 
 
-.news-cardthree {
+.imagetwo {
+width:200px;
+height:200px;
+border:black solid;
+
+}
+
+.news-cardfour {
+
+display:flex;
+flex-direction: column;
+width: 100%;
+text-align: justify;
+
+}
+
+
+
+.imagetwo img {
 
   width: 100%;
-  height: 100px;
-    
+    height: auto;
+    min-height: 100%;
+}
+
+.imagetwotwo {
+  width:200px;
+  height:300px;
+  border:black solid;
 
 }
 
+.imagetwotwo img {
 
+  width: 100%;
+    height: auto;
+    min-height: 100%;
+}
