changed .smaller-news to width in percent instead of px

--- a/style.css
+++ b/style.css
@@ -1,4 +1,237 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  background: #f7f4e9;
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+header {
+  background-color: #fff;
+  color: #23282d;
+  height: 80px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 20px 0;
+  margin: 30px 0 10px;
+}
+
+.logo {
+  width: 60px;
+  height: 60px;
+  border: 3px solid;
+  border-color: #000;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 60px;
+  font-style: italic;
+}
+/* The P in the logo */
+.P {
+  margin: 0;
+  font-size: 40px;
+}
+
+.title {
+  margin: 0 10px;
+}
+
+.nav {
+  display: none;
+}
+
+nav a {
+  display: none;
+  margin-left: 16px;
+  text-decoration: none;
+  color: #000;
+  margin-left: 15px;
+}
+
+a:hover {
+  color: darkgray;
+}
+
+a:active {
+  color: gray;
+}
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 25px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: auto; 
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background-color: #000;
+  border-radius: 5px;
+}
+
+
+
+/*** BIG NEWS ***/
+.big-news {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  max-width: 1100px;
+  margin: 30px auto;
+  padding: 15px 10px 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.big-news div {
+  margin: 0 10px;
+}
+
+.big-news img {
+  width: 100%;
+}
+
+/*** SMALLER NEWS ***/
+.smaller-news {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  max-width: 1100px;
+  margin: auto;
+}
+
+.smaller-news div {
+  background-color: #fff;
+  /* border: solid 1px black; */
+  width: 100%;
+  margin: 0 0 25px;
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.smaller-news img {
+  width: 100%;
+}
+
+footer {
+  background-color: #f7f4e9;
+  height: 50px;
+  width: 95%;
+  margin: 45px auto 0;
+  border-top: solid 0.5px black;
+  border-top-width: 80%;
+}
+
+h1 {
+  font-size: 30px;
+  font-family: 'Vollkorn', serif;
+  margin: 0;
+}
+
+h2 {
+  margin: 14px 0 0;
+  font-family: 'PT Serif', serif;
+  font-weight: 700;
+  font-size: 30px;
+}
+
+h3 {
+  font-family: 'Vollkorn', serif;
+  margin-top: 8px;
+}
+
+h4 {
+  margin: 0;
+  font-family: 'PT Serif', serif;
+  font-weight: 400;
+}
+
+.credit {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10px;
+  font-style: italic;
+  margin: 2px 0 6px;
+}
+
+
+/*** MEDIA QUERIES ***/
+@media (min-width: 667px) /*and (max-width: 1024px)*/ {
+  header {
+    justify-content: space-between;
+    padding: 0 30px; 
+  }
+
+  .title {
+    display: none;
+  }
+
+  nav {
+    display: contents;
+  }
+
+  nav a {
+    display: inline-block;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .smaller-news {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .smaller-news div {
+    width: 48%;
+  }
+
+  h1 {
+    font-size: 50px;
+  }
+
+  h2 {
+    margin: 14px 0 0;
+  }
+
+  h4 {
+    margin: 5px 0 12px;
+  }
+}
+
+@media (min-width: 1024px) {
+  header {
+    justify-content: space-between;
+  }
+
+  nav {
+    display: inline-block;
+  }
+
+  .title {
+    display: inline-block;
+  }
+
+  .big-news {
+    flex-direction: row;
+  }
+
+  .smaller-news div {
+    width: 31%;
+  }
+
+  h2,
+  h3 {
+    margin: 0;
+  }
 }
