--- a/code/style.css
+++ b/code/style.css
@@ -1,3 +1,42 @@
 html {
     background: #F8F9FA;
 }
+
+.logo {
+    width: 62px;
+}
+
+.header {
+    padding: 20px 0px 15px 0px;
+    display: flex;
+    justify-content: space-around;
+}
+
+@font-face {
+    font-family: logofont;
+    src: url(./Germanika-Personal-Use.ttf);
+}
+
+.newspaper-name {
+    font-family: logofont;
+    font-size: 55px;
+    letter-spacing: 3px;
+    margin: 0;
+    font-weight: normal;
+    position: relative;
+    margin-left: -40px;
+}
+
+.navigation-menu {
+    font-family: andale mono;
+    display: flex;
+    align-items: center;
+}
+
+.navigation-item {
+    margin-right: 10px
+}
+
+.navigation-item:last-child {
+    margin-right: 0;
+}
