--- a/code/style.css
+++ b/code/style.css
@@ -5,6 +5,7 @@
 body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    xbox-sizing: border-box;
 }
 
 h1{
@@ -20,13 +21,12 @@ h4 {
     font-size: 18px;
 }
 
-.container { /*general container for max width and marign så det expanderas ut för både big news och small news till sidan*/
+.container { 
     width: 100%;
-    max-width: 1100px; /*so it dosent expand on really wide screens*/
+    max-width: 1100px; 
     margin: 0 auto;
     padding: 0;
-  
-}
+  }
 
 /***** HEADER ******/ /*Klar*/
 
@@ -59,11 +59,14 @@ h4 {
 
 .logo { /*Klar*/
     width: 80px;
+    padding-right: 20px; /* ändrade lite här*/
 }
 
 .header h3 { /*Klar*/
     margin: 0 auto;
+    
     font-family: 'Pacifico', cursive;
+    
 }
 
 .navigation { /*Klar*/
@@ -112,8 +115,8 @@ h4 {
 }
 
 .small-news a {
-    background-color: white;
-    border: 1px solid black;
+    background-color: #fcfcfc;
+    xborder: 1px solid black;
     border-radius: 2%; /*kanterna runt mjuka*/ 
     width: 100%; /*take upp all space - the cards*/
     text-decoration: none;
@@ -127,8 +130,7 @@ h4 {
 .small-news img {
    width: 100%;
    margin-top: 30px;
-   border: 2px solid black;
-
+   
 }
 
 /*** MEDIA QUERIES ***/
@@ -145,7 +147,11 @@ h4 {
     .mobile-hamburger{
         display:none; 
     }
+
+
+
 }
+
 
 @media (min-width: 992px){
     .navigation a {
@@ -170,9 +176,9 @@ h4 {
         width: 80%;
     }
 
-    .small-news a { /*add the width to make the content on a row.*/
-        width: 20%;
+    .small-news a { 
+        margin-left: 20px;
+        width: 40%; /*40 % of container?*/
         flex-grow: 1;
     }
-
 }
