--- a/code/style.css
+++ b/code/style.css
@@ -30,13 +30,14 @@ body {
   font-weight: 600;
   font-size: 1.5rem;
   letter-spacing: 1.5px;
+  padding: 4px;
   color: white;
   text-decoration: none;
   cursor: pointer;
 }
 
 .navigation-container .links:hover {
-  color:rgb(71, 128, 104);
+  color:pink;
 }
 
 /* Navigation bar and dropdown for mobile phones */
@@ -57,11 +58,12 @@ body {
 .mobile-dropdown-content {
   display: none;
   background-color: black;
-  padding: 5px 8px 10px 8px;
+  padding: 10px;
 }
 
 .navigation-container .fa:hover .mobile-dropdown-content {
   display: flex;
+  flex-direction: column;
   color:rgb(71, 128, 104);
 }
 
@@ -75,7 +77,7 @@ body {
 
 .topic {
   display: none;
-  padding: 15px;
+  padding: 5px;
 }
 
 .topic-dropdown {
@@ -105,21 +107,20 @@ body {
 
 .site-name {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  flex-direction: row;
-  margin-right: 180px;
 }
 
 .site-name .logo {
   width: 60px;
   height: 60px;
+  margin-left: 10px;
 }
 
 .h1 {
   color: white;
-  font-family: "Bellota", serif;
-  font-variant: small-caps;
-  font-size: 40px;
+  font-family: "Texturina", serif;
+  font-size: 3rem;
 }
 
 @media (max-width: 767px) {
@@ -129,40 +130,6 @@ body {
   .site-name .logo {
     width: 50px;
     height: 50px;
-  }
-
-  .h1 {
-    font-size: 3rem;
-  }
-}
-
-/*** SOCIAL MEDIA BUTTONS ***/
-
-.social-media {
-  display: flex;
-  align-items: center;
-  
-}
-.social-media .fa {
-  padding: 14px;
-  background: white;
-  color: black;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  text-decoration: none;
-  margin-right: 10px;
-  border-radius: 50%;
-}
-
-.fa:hover {
-  opacity: 0.7;
-}
-
-@media (max-width: 767px) {
-  .social-media .fa {
-    width: 10px;
-    height: 10px;
   }
 }
 
@@ -180,117 +147,142 @@ body {
   text-align: center;
 }
 
-/*** BIG NEWS ***/
+/*** Big News ***/
 
-#big-news {
+.big-news {
   display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+  margin: 20px 5px 100px 5px;
+  max-width: 100%;
+}
+
+.big-news-two {
+  display: none;
   justify-content: center;
   flex-flow: row wrap;
   margin: 40px 20px 100px 20px;
   width: 100%;
 }
 
-#big-news-two {
-  display: none;
-  justify-content: center;
-  margin: 40px 20px 100px 20px;
+.news-box {
   width: 100%;
-}
-
-.box {
-  width: 520px;
+  margin: 7px;
   color: black;
-}
+} 
 
-.box img {
-  max-width: 500px;
-  max-height: 500px;
+@media (min-width: 768px) {
+  .news-box {
+    width: 47%;
+} }
+
+@media (min-width: 1024px) {
+  .news-box {
+    width: 47%;
+  } }
+
+.news-image {
+  width: 100%;
+  height: 100%;
   box-shadow: 2px 3px #888;
 }
 
-.box h3 {
+.news-box .h3 {
   font-family: serif;
-  font-size: 26px;
+  font-size: 2.5rem;
 }
 
-.box p {
+.news-box .text {
   font-family: serif;
-  font-size: 18px;
+  font-size: 1.5rem;
 }
 
-#prev, #next {
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  top: 50%;
-  margin-top: -20px;
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-}
-
-#prev {
-  left: 150px;
-  border-bottom: 6px solid black;
-  border-right: 6px solid black;
-  transform: rotate(130deg);
-}
-
-#next {
-  right: 150px;
-  border-bottom: 6px solid black;
-  border-right: 6px solid black;
-  transform: rotate(-45deg);
-}
-
-#prev:hover, #next:hover {
-  opacity: 0.6;
-}
-
-#home {
-  color: red;
-}
-
-/* OTHER NEWS */
+/* Other News */
 
 .other-news {
   display: flex;
   justify-content: space-around;
   flex-flow: row wrap;
-  width: 100%;
+  margin: 20px 5px 40px 5px;
 }
 
-.small-box {
-  max-width: 350px;
+.small-news-box {
+  max-width: 100%;
   color: black;
   margin-bottom: 50px;
 }
 
-.small-box img {
-  max-width: 350px;
-  max-height: 400px;
-  box-shadow: 2px 3px #888;
+.small-news-box .text {
+  font-size: 1.5rem;
+  text-align: center;
 }
+
+@media (min-width: 768px) {
+.small-news-box {
+  max-width: 45%;
+  color: black;
+  margin-bottom: 50px;
+} }
+
+@media (min-width: 1200px) {
+  .small-news-box {
+    max-width: 22.5%;
+    color: black;
+    margin-bottom: 50px;
+  } }
 
 
 /*** FOOTER ***/
 
 .footer {
-  height: 120px;
+  display: flex;
+  justify-content: space-between;
+  align-items:center;
+  height: 100px;
   bottom: 0;
   width: 100%;
   background-color: black;
-  display: inline-block;
+  margin-top: 90px;
 }
 
-.footer p {
-  font-size: 20px;
-  margin-top: 70px;
+.footer-left {
+  display: flex;
+  align-items: center;
 }
 
-.footer img {
-  width: 100px;
-  float: left;
-  margin: 13px 5px 0px 20px;
+.footer-text {
+  font-size: 1.6rem;
+}
 
+.footer .logo {
+  width: 80px;
+  height: 80px;
+}
+
+/*** SOCIAL MEDIA BUTTONS ***/
+
+.social-media {
+  display: flex;
+  align-items: center;
+}
+
+.social-media .fa {
+  padding: 14px;
+  background: white;
+  color: black;
+  font-size: 1.8rem;
+  text-align: center;
+  text-decoration: none;
+  margin-right: 10px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+@media (max-width: 767px) {
+  .social-media .fa {
+    font-size: 1.2rem;
+  }
 }
