--- a/code/style.css
+++ b/code/style.css
@@ -7,87 +7,77 @@
 
   h1 {
    color: blue;
-
-  }
+   font-size: 40px;
   
-  a:hover {
+  }
 
-    background-color: orange;
 
+  
+  .header {
+
+    display: flex;
+    justify-content: space-between;
+    
     }
 
 
-  .header {
 
-  display: flex;
-  justify-content: space-between;
+
+  .navigation-container {
+
+    display: flex;
+   
+     }
+
   
-  }
+     
+ 
+
+  .navigation-item {
+
+      margin-right: 10px;
+
+    }
+  
+  .navigation-item: last-child {
+  
+  margin-right: 0
+  
+    }
+  
+  a:hover {
+
+  background-color: orange;
 
 
- .logo {
+    }
+
+  .logo {
 
   width: 50px;
 
 }
 
-  .navigation-container {
-
-   display: flex;
-
-  }
-  
-  .navigation-item {
-
-    margin-right: 10px;
-  }
-
-  .navigation-item: last-child {
-
- margin-right: 0
-
-}
-
-
-.news-card {
-
- width: 100%;
- height: 100px;
- margin-bottom: 10px;
-
-}
-
 .big-news {
-
-display: flex;
-align-items: center;
-}
-
-
-.small-news {
-
+ 
   display: flex;
   align-items: center;
-  justify-content: center;
+  }
   
- 
-}
-
-
 .marine {
-
+ 
   width: 800px;
   height: 450px;
 }
 
+.news-card {
 
-.news-cardtwo {
-
-  width: 300%;
-  height: 300px;
-  
+  width: 100%;
+  height: 100px;
+  margin-bottom: 10px;
  
-}
+ }
+ 
 
 .Text {
   display: flex;
@@ -123,60 +113,62 @@ align-items: center;
 }
 
 
-
 .Texttwo {
 
-display: flex;
-justify-content: space-evenly;
-flex-wrap: wrap;
-
-}
-
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  
+  }
+  
 .container2 {
-
-display:flex;
-flex-direction: column;
-width: 20%;
-
-
-}
-
-
-.imagetwo {
-width:200px;
-height:200px;
-border:black solid;
-
-}
-
-.news-cardfour {
-
-display:flex;
-flex-direction: column;
-width: 100%;
-text-align: justify;
-
-}
+  
+  display:flex;
+  flex-direction: column;
+  width: 20%;
+  
+  
+  }
+  
+  
+  .news-cardfour {
+  
+    display:flex;
+    flex-direction: column;
+    width: 100%;
+    text-align: justify;
+    
+    }
 
 
-
-.imagetwo img {
-
-  width: 100%;
-    height: auto;
-    min-height: 100%;
-}
-
-.imagetwotwo {
+  .imagetwo {
   width:200px;
-  height:300px;
+  height:200px;
   border:black solid;
+  
+  }
+  
+  
+  .imagetwo img {
+  
+    width: 100%;
+      height: auto;
+      min-height: 100%;
+  }
+  
+  .imagetwotwo {
+    width:200px;
+    height:300px;
+    border:black solid;
+  
+  }
+  
+  .imagetwotwo img {
+  
+    width: 100%;
+      height: auto;
+      min-height: 100%;
+  }
+  
+  
 
-}
-
-.imagetwotwo img {
-
-  width: 100%;
-    height: auto;
-    min-height: 100%;
-}
