--- a/code/style.css
+++ b/code/style.css
@@ -11,7 +11,7 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
-  background-color: black;
+  background-color: #511146 ;
   height: 65px;
   width: 100%;
   font-family: "Texturina", serif;
@@ -114,7 +114,17 @@ body {
 .site-name .logo {
   width: 60px;
   height: 60px;
+  margin-right: 10px;
   margin-left: 10px;
+  animation-name: logo;
+  animation-duration: 1.5s;
+}
+
+@keyframes logo {
+  from {width: 20px;
+        height: 20px;}
+  to {width: 60px;
+      height: 60px;}
 }
 
 .h1 {
@@ -153,7 +163,7 @@ body {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  margin: 20px 5px 100px 5px;
+  margin: 40px 5px 100px 5px;
   max-width: 100%;
 }
 
@@ -250,13 +260,15 @@ body {
   align-items: center;
 }
 
-.footer-text {
-  font-size: 1.6rem;
-}
-
 .footer .logo {
   width: 80px;
   height: 80px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.footer-text {
+  font-size: 1.6rem;
 }
 
 /*** SOCIAL MEDIA BUTTONS ***/
