--- a/code/style.css
+++ b/code/style.css
@@ -4,8 +4,8 @@ html {
 }
 
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -175,24 +175,82 @@ input:checked ~ .dropdown .dropdown-list {
 }
 
 /*** FOOTER ***/
-footer {
-  display: block;
+.footer-general {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background: rgb(55, 72, 94);
   margin-top: 20px;
   width: 100%;
 
 }
-footer ul {
-  margin: 0px;
-  padding-bottom: 20px;
+.logo-footer {
+  width: 150px;
+  height: 140px;
 }
+.footer-list {
+  margin: 0px;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer-link {
+  text-decoration:none;
+  color: rgb(215, 235, 248);
+  padding-bottom: 5px;
+}
+.footer-column {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  align-items: center;
+}
+/*** FOOTER: Subscribe button ***/
+.subscribe-button {
+  background: rgb(69, 103, 146);
+  border: none;
+  padding: 8px;
+  text-align: center;
+  cursor: pointer;
+  color: #fff;
+  margin-top: 10px;
+  border-radius: 5px;
+  box-shadow: 0 5px rgba(197, 211, 252, 0.404);
+  border-style: none;
+}
+
+.subscribe-button:hover, .subscribe-button:focus {
+  background: rgb(92, 123, 165);
+}
+.subscribe-button:active {
+  box-shadow: 0 3px rgba(197, 211, 252, 0.404);
+}
+/*** FOOTER: Social media icons ***/
+.fa {
+  padding: 10px;
+  font-size: 30px;
+  width: 20px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+.fa:hover {
+  opacity: 0.7;
+}
+.fa-facebook, .fa-twitter, .fa-linkedin, .fa-instagram {
+  color: #fff;
+  text-decoration: none;
+  background:rgb(105, 144, 180);
+}
+
 
 /*** MEDIA QUERIES ***/
  @media (min-width: 650px) {
   .nav-link{
     background:rgba(143, 194, 241, 0.651);
   }
-  
+
   .header-phone {
     display: none;
   }
@@ -220,10 +278,20 @@ footer ul {
   }
   .ordinarynews-image:hover {
     box-shadow: 0 4px 10px rgba(40, 141, 235, 0.747);
-    /* transform: scale(1.2); */
   }
   .each-news:hover {
     transform: scale(1.1);
+  }
+      /** Footer styling*/
+  .footer-general {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .footer-list {
+    align-items: flex-start;
+  }
+  .footer-column {
+    align-items: flex-start;
   }
  }
 
